Fix assert when adding the first layers style into the Krita's storage

When importing a layers style via importing its storage, its physical
representation in memory as KoResource, obviously, changes.

BUG:446650